--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,12 @@ add_custom_command(
         COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different  ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/SDL2-2.28.5/lib/x64 "${CMAKE_CURRENT_BINARY_DIR}/"
         VERBATIM
 )
+
+add_executable(tutorial03 tutorial03/tutorial03.cpp)
+target_link_libraries(tutorial03 FFmpeg SDL2285)
+add_custom_command(
+        TARGET tutorial03 PRE_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different  ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/ffmpeg-master-latest-win64-gpl-shared/bin "${CMAKE_CURRENT_BINARY_DIR}/"
+        COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different  ${CMAKE_CURRENT_SOURCE_DIR}/3rd_party/SDL2-2.28.5/lib/x64 "${CMAKE_CURRENT_BINARY_DIR}/"
+        VERBATIM
+)
